# AID

./: CMakeLists.txt  README.md  asm_funcs.S  chat_log.md  clone.c  console_chat.c  console_chat.h  dialog.md  interactive.c  interactive.h  main.c  markov.c  markov.h  md_parser.c  md_parser.h  model_builder.c  model_builder.h  run.ps1  stopwords.txt  test_dialog.md
corpus/: questions.md  science.md
dialogs/: test_dialog.md
input/: code_sample1.c  code_sample2.c  code_sample3.c  dialog1.md  dialog2.md  dialog3.md  edge_cases.md  full_markdown.md  long_text.md  mixed_case.md  mixed_languages.md  repetition.md  sample1.md  sample2.md  sample3.md  sample4.md  sample5.md  simple.md  with_markdown.md
input_test/: sample1.md  sample2.md  sample3.md  test_blocks.md
input_test_c/: test.h  test1.c  test2.c
input_test_tables/: global_bigram.txt  global_trigram.txt  global_unigram.txt
output/: bigram_graph.dot  dialog.txt  dialog1.txt  dialog2.txt  dialog3.txt  edge_cases.txt  full_markdown.txt  generated_markdown.md  generated_output.txt  generated_text.md  global_bigram.txt  global_table.txt  global_trigram.txt  global_unigram.txt  long_generated.md  long_text.tx  long_text.txt  mixed_case.tx  mixed_case.txt  mixed_languages.txt  repetition.tx  repetition.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  simple.tx  simple.txt  test_c_parser_results.txt  test_interactive_results.txt  test_markov_results.txt  test_md_results.txt  test_results.txt  test_tokenizer_results.txt  unigram_graph.dot  with_markdown.tx  with_markdown.txt
output/test/: vocab.txt
output_test/: global_bigram.txt  global_trigram.txt  global_unigram.txt  sample1.txt  sample2.txt  sample3.txt  test_blocks.txt
result/: debug_c_parser_log.txt  debug_log.txt  debug_markov_log.txt  debug_md_log.txt  debug_tokenizer_log.txt
src/: CMakeLists.txt  Doxyfile  c_parser.c  c_parser.h  interactive.c  interactive.h  main.c  markov.c  markov.h  md_parser.c  md_parser.h  ngram_model.c  ngram_model.h  tokenizer.c  tokenizer.h  utils.c  utils.h
src/core/: CMakeLists.txt
src/generation/: CMakeLists.txt
src/interactive/: CMakeLists.txt
src/parsers/: CMakeLists.txt  parser_interface.h
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt  run_asm_tests.bat  test_asm.c  test_c_parser.c  test_interactive.c  test_markov.c  test_md_parser.c  test_model_builder.bat  test_model_builder.gdb  test_ngram.c  test_tokenizer.c
tests/corpus/: science.md  test.md
